welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:23: error: not found: type East
  setDirection(dir:East)
                   ^DwarfCode:23: error: not found: value dir
  setDirection(dir:East)
               ^DwarfCode:28: error: not found: type West
  setDirection(dir:West)
                   ^DwarfCode:28: error: not found: value dir
  setDirection(dir:West)
               ^DwarfCode:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^DwarfCode:38: warning: enclosing method positionFinale has result type Unit: return value discarded
    return true
    ^DwarfCode:40: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^DwarfCode:40: warning: enclosing method positionFinale has result type Unit: return value discarded
  return false
  ^